sorting movies and pagination of movies